// Copyright (c) reifydb.com 2025
// This file is licensed under the MIT

syntax = "proto3";

package reifydb;

service DB {
  rpc Command(CommandRequest) returns (stream CommandResult);
  rpc Query(QueryRequest) returns (stream QueryResult);
}

message CommandRequest {
  string statements = 1;
  optional Params params = 2;
}

message QueryRequest {
  string statements = 1;
  optional Params params = 2;
}

message Params {
  oneof params {
    PositionalParams positional = 1;
    NamedParams named = 2;
  }
}

message PositionalParams {
  repeated Value values = 1;
}

message NamedParams {
  map<string, Value> values = 1;
}

message CommandResult {
  oneof result {
    Frame frame = 1;
    Diagnostic error = 2;
  }
}

message QueryResult {
  oneof result {
    Frame frame = 1;
    Diagnostic error = 2;
  }
}

message Frame {
  repeated FrameColumn columns = 1;
}

message FrameColumn {
  string name = 1;
  Type ty = 2;
  repeated Value data = 3;
  optional string frame = 4;
}

message Value {
  oneof type {
    bool bool_value = 1;

    int32 int1_value = 2;
    int32 int2_value = 3;
    int32 int4_value = 4;
    int64 int8_value = 5;
    Int128 int16_value = 6;

    uint32 uint1_value = 7;
    uint32 uint2_value = 8;
    uint32 uint4_value = 9;
    uint64 uint8_value = 10;
    UInt128 uint16_value = 11;

    string string_value = 12;

    float float32_value = 13;
    double float64_value = 14;

    bool undefined_value = 15;

    Date date_value = 16;
    DateTime datetime_value = 17;
    Time time_value = 18;
    Interval interval_value = 19;
    uint64 row_number_value = 20;
    bytes uuid4_value = 21;
    bytes uuid7_value = 22;
    bytes blob_value = 23;
    bytes identity_id_value = 24;
  }
}

message Int128 {
  uint64 high = 1;
  uint64 low = 2;
}

message UInt128 {
  uint64 high = 1;
  uint64 low = 2;
}

message Date {
  // Days since Unix epoch (1970-01-01)
  int32 days_since_epoch = 1;
}

message DateTime {
  // Seconds since Unix epoch (1970-01-01T00:00:00Z)
  int64 seconds = 1;
  // Nanosecond offset within the second (0-999,999,999)
  uint32 nanos = 2;
}

message Time {
  // Nanoseconds since midnight (00:00:00.000000000)
  uint64 nanos_since_midnight = 1;
}

message Interval {
  // Number of months (can be negative)
  int32 months = 1;
  // Number of days (can be negative)
  int32 days = 2;
  // Duration in nanoseconds for sub-day precision (can be negative)
  int64 nanos = 3;
}

message Diagnostic {
  string code = 1;
  optional string statement = 2;
  string message = 3;
  optional Span span = 4;
  optional string label = 5;
  optional string help = 6;
  repeated string notes = 7;
  DiagnosticColumn column = 8;
  optional Diagnostic cause = 9;
}

message Span {
  uint32 offset = 1;
  uint32 line = 2;
  string fragment = 3;
}

message DiagnosticColumn {
  string name = 1;
  Type ty = 2;
}

enum Type {
  UNDEFINED = 0x00;
  FLOAT4 = 0x01;
  FLOAT8 = 0x02;
  INT1 = 0x03;
  INT2 = 0x04;
  INT4 = 0x05;
  INT8 = 0x06;
  INT16 = 0x07;
  TEXT = 0x08;
  UINT1 = 0x09;
  UINT2 = 0x0A;
  UINT4 = 0x0B;
  UINT8 = 0x0C;
  UINT16 = 0x0D;
  BOOL = 0x0E;
  DATE = 0x0F;
  DATETIME = 0x10;
  TIME = 0x11;
  INTERVAL = 0x12;
  ROW_NUMBER = 0x13;
  UUID4 = 0x14;
  UUID7 = 0x15;
  BLOB = 0x16;
  IDENTITY_ID = 0x17;
}